--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~8.2.5",
     "@fortawesome/fontawesome-free": "^5.12.0",
     "hammerjs": "^2.0.8",
+    "ng-sidebar": "^9.2.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
