--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/fontawesome-free": "^5.12.0",
     "hammerjs": "^2.0.8",
     "ng-sidebar": "^9.2.0",
+    "ngx-bootstrap-datetime-popup": "^5.0.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
