--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "@angular/platform-browser-dynamic": "~8.2.5",
     "@angular/router": "~8.2.5",
     "@fortawesome/fontawesome-free": "^5.12.0",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.4",
+    "angular-calendar": "^0.28.2",
+    "bootstrap": "^4.4.1",
+    "date-fns": "^2.8.1",
     "hammerjs": "^2.0.8",
     "ng-sidebar": "^9.2.0",
     "ngx-bootstrap-datetime-popup": "^5.0.2",
