--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@ng-bootstrap/ng-bootstrap": "^5.1.4",
     "angular-calendar": "^0.28.2",
     "bootstrap": "^4.4.1",
+    "chart.js": "^2.9.3",
     "date-fns": "^2.8.1",
     "hammerjs": "^2.0.8",
     "ng-sidebar": "^9.2.0",
+    "ng2-charts": "^2.3.0",
     "ngx-bootstrap-datetime-popup": "^5.0.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
