--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.5",
-    "@angular/cdk": "~8.2.3",
+    "@angular/cdk": "^8.0.0",
     "@angular/common": "~8.2.5",
     "@angular/compiler": "~8.2.5",
     "@angular/core": "~8.2.5",
@@ -22,16 +22,21 @@
     "@angular/platform-browser-dynamic": "~8.2.5",
     "@angular/router": "~8.2.5",
     "@fortawesome/fontawesome-free": "^5.12.0",
+    "@nebular/eva-icons": "^4.6.0",
+    "@nebular/theme": "^4.6.0",
     "@ng-bootstrap/ng-bootstrap": "^5.1.4",
     "angular-calendar": "^0.28.2",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
     "date-fns": "^2.8.1",
+    "eva-icons": "^1.1.2",
     "hammerjs": "^2.0.8",
+    "moment": "^2.24.0",
     "ng-sidebar": "^9.2.0",
     "ng2-charts": "^2.3.0",
     "ngx-bootstrap-datetime-popup": "^5.0.2",
     "rxjs": "~6.4.0",
+    "saturn-datepicker": "^8.0.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
@@ -40,9 +45,10 @@
     "@angular/cli": "~8.3.4",
     "@angular/compiler-cli": "~8.2.5",
     "@angular/language-service": "~8.2.5",
-    "@types/node": "~8.9.4",
+    "@schematics/angular": "~8.3.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
